Restoring from query yield fails to fetch collection using point-in-time reads

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2023-03-20, Execution Team 2023-04-03
    • 35
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When a query yields it releases its snapshot, and any point-in-time instantiated collections stored on the snapshot decoration are destructed. At the start of a query, collections are fetched using a namespace. However, when a query is restoring from yield it attempts to fetch collections by UUID. It's possible for a UUID to no longer resolve to a namespace in the latest collection catalog if that collection was dropped while the query was yielding. This doesn't conclude that the collection is inaccessible at an earlier point-in-time as the data files may still be on disk.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: