SERVER-74878 Restoring from query yield supports fetching point-in-time collections using UUIDs that are no longer in the latest CollectionCatalog