jstests/noPassthrough/point_in_time_lookups.js
@@ -17,6 +17,9 @@ const replTest = new ReplSetTest({
             // Set the history window to 1 hour to prevent the oldest timestamp from advancing. This
             // is necessary to avoid removing data files across restarts for this test.
             minSnapshotHistoryWindowInSeconds: 60 * 60,
+            // Exercise yielding and restoring point-in-time collections.
+            internalQueryExecYieldIterations: 0,
+            internalQueryExecYieldPeriodMS: 0
         }
     }
 });
